--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- "name": "Fardan",
+ "name": "Farid",
  "description": "Whatsapp Using Lib Baileys Multi Device",
  "version": "2.0.5",
  "main": "index.js",
@@ -18,7 +18,7 @@
   "bot-md",
   "multi-device"
  ],
- "author": "Fardan Official",
+ "author": "Farid Official",
  "license": "MIT",
  "dependencies": {
   "@adiwajshing/baileys": "^4.1.0",
